--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,11 @@ Django==5.1.2
 django-ckeditor==6.7.1
 django-js-asset==2.2.0
 django-tinymce==4.1.0
+gunicorn==23.0.0
+packaging==24.2
 pillow==11.0.0
+psycopg2==2.9.10
+python-dotenv==1.0.1
 sqlparse==0.5.1
 tzdata==2024.2
 whitenoise==6.7.0
