--- a/procfile
+++ b/procfile
@@ -1,2 +1,2 @@
-web: gunicorn nulface.wsgi --log-file
-web: python manage.py migrate && gunicorn nulface.wsg
+web: gunicorn nulface.wsgi --log-file -
+release: python manage.py migrate && python manage.py collectstatic --noinput
